// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorsSection component should render NTRO design form fields 1`] = `
<Section
  cards={
    Array [
      Object {
        "groups": Array [
          Array [
            "authors",
          ],
        ],
        "title": "Designers",
      },
      Object {
        "groups": Array [
          Array [
            "editors",
          ],
        ],
        "title": "Consultants",
      },
    ]
  }
  disabled={false}
/>
`;

exports[`AuthorsSection component should render default view 1`] = `
<Section
  cards={
    Array [
      Object {
        "groups": Array [
          Array [
            "authors",
          ],
        ],
        "title": "Authors",
      },
    ]
  }
  disabled={false}
/>
`;

exports[`AuthorsSection component should render disabled view 1`] = `
<Section
  cards={
    Array [
      Object {
        "groups": Array [
          Array [
            "authors",
          ],
        ],
        "title": "Authors",
      },
    ]
  }
  disabled={true}
/>
`;

exports[`AuthorsSection component should render edited book form fields 1`] = `
<Section
  cards={
    Array [
      Object {
        "groups": Array [
          Array [
            "editors",
          ],
        ],
        "title": "Editors",
      },
    ]
  }
  disabled={false}
/>
`;

exports[`AuthorsSection component should render non-NTRO design form fields 1`] = `
<Section
  cards={
    Array [
      Object {
        "groups": Array [
          Array [
            "authors",
          ],
        ],
        "title": "Designers",
      },
      Object {
        "groups": Array [
          Array [
            "editors",
          ],
        ],
        "title": "Contributors",
      },
    ]
  }
  disabled={false}
/>
`;
